esercizio 9 con eliminazione di un prodotto dalla lista dei prodotti

--- a/siw-servlet-es9.7/.project
+++ b/siw-servlet-es9.7/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>siw-servlet-es9-ragazzo</name>
+	<name>siw-servlet-es9.7</name>
 	<comment></comment>
 	<projects>
 	</projects>
